# semio_attention_ros

./: CMakeLists.txt  Readme.md  mainpage.dox  package.xml  run-docker.sh
nodes/: CMakeLists.txt  example_attention_targets_node.cpp  semio_attention_node.cpp
